# twirl

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
docs/: framework.drawio
include/: component.h  config.h  game.h  scene.h  shape.h  system.h
include/components/: base_components.h  component.h  components.h  other_components.h  physics_components.h  scene_components.h  sfml_components.h  system_components.h  tags.h  ui_components.h
include/systems/: entity.h  interface.h  physics.h  render.h  scene.h  system.h
profiling/: profile.sh
python/: scene_builder.ipynb
scenes/: background.json  defeat_menu.json  enemies.json  enemy_states.json  environment.json  initial_conditions.json  main_scene.json  player.json  projectiles.json  scene_builder.ipynb  test_scenes.ipynb  user_interface.json
src/: game.cpp  game.h  game_objects.cpp  game_objects.h  main.cpp  particle.cpp  particle.h  scene.cpp  scratch  scratch.cpp  shape.cpp  system.cpp  systems.cpp  systems.h
src/components/: component.cpp  components.cpp  tags.h
src/python/: boilerplate_builder.py  build_components.ipynb  build_scenes.ipynb  components_by_file.json  includes_by_file.json
src/systems/: entity.cpp  interface.cpp  physics.cpp  render.cpp  scene.cpp  system.cpp
tests/: test_components.cpp  test_game.cpp  test_main.cpp  test_scenario.cpp  test_scene.cpp  test_scenes.ipynb  test_shape.cpp  test_system.cpp
tests/test_data/: test_scene.json
tests/test_data/test_scenes/: main_test_scene.json  test_collision.json  test_menu.json  triggered_scene.json  triggered_scene.json.json
tests/test_python/: build_test_scenes.ipynb  test_boilerplate_builder.py  test_build_scenes.ipynb  test_expected_components.cpp  test_expected_components.cpp.test  test_expected_components.h  test_expected_components.h.test  test_generated_components.cpp  test_generated_components.cpp.test  test_generated_components.h  test_generated_components.h.test
